#############################################################################
##
#W  CHANGELOG        intpic - a GAP package for drawing integers
#Y  Copyright (C) 2013-...                                     Manuel Delgado
##
##  Licensing information can be found in the LICENSE file of this package.
##
#############################################################################
##
=============
 Version 0.2.4 dev  (//2022)
=============
 - test file updated
 - added the default option "negatives"
 - fixed a bug caused by the use of "ns_table" in a part of the code not specifically dedicated to numerical semigroups; the option "negatives" is used instead
 - manual updated (with illustrations of use of the "negatives" option)
	
=============
 Version 0.2.4  (23/8/2019)
=============
 - test file updated
 - added the option "ns_table" to the functions "TikzCodeForNumericalSemigroup" and "IP_TikzArrayOfIntegers" to make drawings of numerical semigroups as tables with the threshold interval in the top row
 - manual updated (with illustrations of use of the "ns_table" option)

=============
 Version 0.2.3  (14/9/2017)
=============
 - test file updated and some minor changes in the manual

=============
 Version 0.2.0  (3/7/15)
=============
 - added some stuff for drawing sets of numerical semigroups

=============
 Version 0.1.0  (5/7/13)
=============
  - fixed a bug in IP_TikzArrayOfIntegers

=============
 Version 0.0.9  (21/6/13)
=============
  - The first public version

=============
 Version 0.0.0  (11/6/13)
=============

  - first steps in producing the package 
      (A preliminary version was named integersem)
