@@ -1,4 +1,5 @@
 AuxiliaryGlobalVariableForTikzCodeForNumericalSemigroup := 0;
 DeclareGlobalFunction("TikzCodeForNumericalSemigroup");
+DeclareGlobalFunction("DrawNumericalSemigroup");
 DeclareGlobalFunction("SetOfNumericalSemigroups");
 DeclareGlobalFunction("DrawSetOfNumericalSemigroups");
